--- a/saad-portfolio/src/todo/toDo.txt
+++ b/saad-portfolio/src/todo/toDo.txt
@@ -1,4 +1,8 @@
++ replace typewriter text with stamped text, remove blinking caret
++ put scroll down icon with text "scroll down"
 + decide on background for entry page
++ navbar animates into place
+
 + select fonts for entry page(title, button) and for each section
 + scroll into animations for each section
 + possible scroll out animation for the entry page, if doing then attach it to the button as well as the scroll
