--- a/saad-portfolio/src/todo/toDo.txt
+++ b/saad-portfolio/src/todo/toDo.txt
@@ -3,9 +3,16 @@
 + decide on background for entry page
 + navbar animates into place
 
+
 + education on the right, courses on the left
 
 + app.tsx remove onbuttonclick
 + select fonts for entry page(title, button) and for each section
 + scroll into animations for each section
 + possible scroll out animation for the entry page, if doing then attach it to the button as well as the scroll
+
+wow u finished the website...congrats?
+you still need to include [somewhere] a description of what you used to make the website..its a project idiot.
+also fix the website tab icon bc rn its still the vite lol u fucking idiot.
+
+woah, all, done?
